<resources>
    <string name="app_name">Next Layer Merchant</string>
    <string name="sales"><u>SALES</u></string>
    <string name="refunds"><u>REFUNDS</u></string>
    <string name="refund">REFUND</string>
    <string name="get_paid">GET PAID</string>
    <string name="todo">TODO</string>
    <string name="distribute">DISTRIBUTE</string>
    <string name="commandeer">COMMANDEER</string>
    <string name="receivables"><u>RECEIVABLES</u></string>
    <string name="sendables"><u>SENDABLES</u></string>
    <string name="login">Login</string>
    <string name="email"> Email</string>
    <string name="footer">POWERED BY NEXT LAYER TECHNOLOGY</string>

    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_up">Register</string>
    <string name="or">or</string>
    <string name="empty">Field cannot be left blank.</string>
    <string name="email_format">Email format is not valid.</string>
    <string name="password_match">Password Does not match</string>
    <string name="exit_title">Exit confirmation</string>
    <string name="exit_subtitle">Are You Sure To Exit?</string>
    <string name="additem_title">Add Item confirmation</string>
    <string name="additem_subtitle">Are You Sure?</string>
    <string name="delete_title">Delete</string>
    <string name="delete_subtitle">Are you sure you want to delete this item?</string>
    <string name="update_title">Update confirmation</string>
    <string name="update_subtitle">Are You Sure To Update?</string>
    <string name="sale_id">Sale Id</string>
    <string name="item_id">Item Id</string>
    <string name="item_name">Item Name</string>
    <string name="item_price">Item Price</string>
    <string name="refund_id">Refund Id</string>
    <string name="refend_amount">Refend Amount</string>
    <string name="mobile_and_app_must_on_same_network">Mobile and Server Must on Same Network</string>
    <string name="enter_secrete_key">Enter Sorvereign Link</string>
    <string name="enter_Sovereign_key_via_qr">Scan QR for Sorvereign Link</string>
    <string name="enter_upc_code_via_scanner">Scan UPC for Add Item</string>
    <string name="scanqrforbolt11">Scan Bolt11 QR</string>
    <string name="scanqrfornewmembertoken">Scan Member Token QR</string>
    <string name="connect">Connect</string>
    <string name="scanqr">SCAN QR CODE </string>
    <string name="btcrate1">\n Btc</string>
    <string name="btcrate2">\n Btc/Usd</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_item">Add \n Item</string>
    <string name="checkout">CHECKOUT</string>
    <string name="scanups">Scan UPC</string>
    <string name="merchant">MERCHANT</string>
    <string name="admin">ADMIN</string>
    <string name="loginunderline">Login</string>
    <string name="thorstartingtext"> Thor \n Server Starting...</string>
    <string name="lightingstartingtext"> Lightning \n Server Starting...</string>
    <string name="bitcoinstartingtext"> Bitcoin \n Server Starting...</string>
    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="bottomLine">POWERED BY NEXT LAYER TECHNOLOGY</string>
    <string name="welcome_text">POWERED BY NEXT LAYER TECHNOLOGY</string>

    <string name="welcome_text_bold">NEXT LAYER TECHNOLOGY</string>


    <string name="sshkeyalertmsg">You are about to begin the process of authentication for this device. Once this process finishes, your device will retain your keys to connect to your Sorvereign server. Beyond this point, Next Layer Technology will have NO ACCESS to your setup and is not responsible for misuse or in the case that the device becomes compromised.</string>

    <string name="sshkeyalertmsg2">In order to retain Sorvereign CONTROL of your device and your funds, we will now process, authorize, and enable this device as trusted and secured.</string>
    <string name="default_notification_channel_id">1</string>
    <string name="payment_notification_channel_id">2</string>
    <string name="fcm_message">\"Next Layer Merchant\"</string>
    <string name="msg_token_fmt">22</string>

</resources>
